--- a/playground/index.html
+++ b/playground/index.html
@@ -10,14 +10,17 @@
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
     <script src="Leaflet.TrueSize.js"></script>
     <style>
-      #map {
+      .map {
         width: 100%;
         height: 500px;
       }
     </style>
   </head>
   <body>
-    <div id="map"></div>
+    <div id="map1">
+      <div class="map"></div>
+      <button class="remove">Remove</button>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
