--- a/playground/index.html
+++ b/playground/index.html
@@ -12,7 +12,8 @@
     <style>
       .map {
         width: 100%;
-        height: 500px;
+        height: 90vh;
+        margin: 0 auto;
       }
     </style>
   </head>
