--- a/playground/index.html
+++ b/playground/index.html
@@ -12,10 +12,16 @@
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
     <script src="Leaflet.TrueSize.js"></script>
     <style>
-      .map {
-        width: 100%;
-        height: 90vh;
-        margin: 0 auto;
+      html, body {
+        margin: 0;
+        padding: 0;
+      }
+
+      .map,
+      #map1 {
+        width: 800px;
+        height: 500px;
+        margin: 0;
       }
     </style>
   </head>
