fix(drag): handle map container offset

--- a/playground/index.html
+++ b/playground/index.html
@@ -21,7 +21,7 @@
       #map1 {
         width: 800px;
         height: 500px;
-        margin: 0;
+        margin: 100px;
       }
     </style>
   </head>
