fix(dragging): fix dragging for polygon on ios

--- a/playground/index.html
+++ b/playground/index.html
@@ -18,14 +18,16 @@
       }
 
       .content {
+        width: 100%;
         max-width: 960px;
-        margin: 100px auto;
+        margin: 0 auto;
       }
 
       #map {
-        width: 800px;
+        width: 100%;
         height: 500px;
       }
+
     </style>
   </head>
   <body>
