--- a/playground/index.html
+++ b/playground/index.html
@@ -8,13 +8,12 @@
 
     <link rel="stylesheet" href="main.css" />
 
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
-    <script src="Leaflet.TrueSize.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
+    <script src="Leaflet.TrueSize.umd.js"></script>
     <style>
       html, body {
         margin: 0;
-        /* padding: */
       }
 
       .content {
@@ -27,7 +26,6 @@
         width: 100%;
         height: 500px;
       }
-
     </style>
   </head>
   <body>
