refactor(rollup): use new api, v3

--- a/playground/index.html
+++ b/playground/index.html
@@ -32,6 +32,8 @@
     <div class="content">
       <div id="map"></div>
       <button class="remove">Remove</button>
+      <button class="reset">Reset</button>
+      <button class="center">Set Center</button>
     </div>
     <script src="index.js"></script>
   </body>
